# examparse

./: .gitignore  2-《数据安全管理员题库》（客观题）-20250805.xlsx  API_CONFIG.md  README.md  TODO_DESKTOP.md  c  case_analysis_standardizer.py  claude.md  config.py  env.example  essay_standardizer.py  judgment_standardizer.py  main.py  multiple_choice_standardizer.py  prompt.md  pyproject.toml  question_processor.py  question_standardization_manager.py  question_standardizer_base.py  short_answer_standardizer.py  single_choice_standardizer.py
.claude/: settings.local.json
.github/workflows/: build-desktop.yml
apps/desktop/: .gitignore  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/ui/: index.html  package-lock.json  package.json  src-tauri-proxy.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/ui/src/: main.tsx
apps/desktop/ui/src/lib/: utils.ts
docs/: BUILD_GUIDE.md  PACKAGING_SUMMARY.md
scripts/: build_desktop.py  build_sidecar.py  verify_build.py
sidecar/: EVENTS.md  __init__.py  __main__.py  config.py  event_schema.json  events.py  main.py  runner.py
tests/: test_event_schema.py  test_excel_writing.py  test_openai_case.py  test_pdf_extraction.py  test_sidecar_cache.py  test_sidecar_config.py  test_sidecar_events.py  test_sidecar_retry.py  test_sidecar_runner.py  test_small_case.py  test_standardization.py  test_text_splitting.py
utils/: __init__.py  standardization_utils.py
(+14 files in other folders)
