[project]
name = "question-processor"
version = "0.1.0"
description = "数据安全管理员题库处理工具 - 将PDF/Word题库转换为结构化Excel文件"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyMuPDF>=1.23.14",
    "openpyxl>=3.1.2",
    "openai>=1.12.0",
    "google-generativeai>=0.8.0",
    "tqdm>=4.66.2",
    "httpx[socks]>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
]
