[package]
name = "examparse-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
keyring = "2.3"
directories = "5.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

